--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "dotenv": "16.4.5",
     "express": "4.21.1",
+    "firebase": "11.0.2",
+    "firebase-admin": "13.0.1",
     "mongoose": "8.8.2"
   }
 }
